kubernetes/frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-frontend-deployment
  namespace: webapp
  labels:
    app: frontend
spec:
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  replicas: 3
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
        - name: frontend
          image: gcr.io/dynamic-concept-305518/web-frontend:latest
          ports:
            - containerPort: 3000
              protocol: TCP
          resources:
            limits:
              cpu: "800m"
            requests:
              cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: app-frontend
  namespace: webapp
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
