kubernetes/postgres-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "postgres-db"
  namespace: webapp
spec:
  clusterIP: None
  ports:
  -
    name: "postgres-db"
    protocol: "TCP"
    port: 5432
    targetPort: 5432
    nodePort: 0

---
apiVersion: "v1"
kind: "Endpoints"
metadata:
  name: "postgres-db"
  namespace: webapp
subsets:
  -
    addresses:
      -
        ip: "10.126.0.2" #Update postgres cloud sql ip returned by terraform here
    ports:
      -
        port: 5432
        name: "postgres-db"
